.M3u playlists are broken and will not play cos %0D added to each line after reading
In current nightly 2017-05-24
m3u playlists are read, entries shown but on playing errors occur because vlc adds a %0D to each file name
Saving this playlist with current nightly %0D AND a blank line is added to the file
--
~~ Another bug i noticed: blanks are converted to %0.9.x maintenance when creating or saving an m3u playlist with the nightlies since april.
~~ Most players do not interpret the %0.9.x maintenance and will not play. Please revert to the blank spaces like it was before (til end of 2016 i think)